--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box mt-5 mx-auto">
-          <img src="img/冯德莱恩2.jpg" style="height: 74%;width: 74%">
+          <img src="img/冯德莱恩2.jpg" style="height: 64%;width: 64%">
           <p>
           <h4 class="mb-3">乌尔苏拉·冯德莱恩<br> Ursula Leyen</h4></p>
           <p class="text-muted mb-0">德国首位女国防部长
@@ -404,7 +404,7 @@
 <footer class="main-footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-12">
         <div class="logo">
           <h6>关于我们</h6>
         </div>
@@ -416,9 +416,15 @@
             1. WORLD ECONOMIC FORUM（世界经济论坛）《Global Gender Gap Report 2022》
             <br>2.Inter-Parliamentary Union (https://www.ipu.org/)
             <br>3.芬兰国家统计局
-            <br>4.中国妇女报《卢旺达：妇女高参政率与社会地位提升的复杂境况》
-            <br>5.博鳌亚洲论坛《女性|“她力量”主导新政府凸显芬兰女性地位》
-            <br>6.虎嗅《致命女人：拉加德》</p>
+            <br>4.卢旺达国家统计局
+          <br>5.联合国开发计划署《性别不平等指数》
+            <br>6.中国妇女报《卢旺达：妇女高参政率与社会地位提升的复杂境况》
+        <br>7.李洁 & 米雷耶·巴塔穆利扎 & 卡朗瓦·埃瓦里斯特《“末日重建”与走下神坛的女英雄：卢旺达女性领导者的国家—社会处境与应对》
+<br>8.国务院妇女儿童工作委员会《阿联酋对女性教育的投入收效良多》
+          <br>9.阿联酋通讯社《阿联酋在联合国妇女地位会议上强调致力于实现两性平等》
+<br>10.博鳌亚洲论坛《女性|“她力量”主导新政府凸显芬兰女性地位》
+          <br>11.虎嗅《致命女人：拉加德》
+        </p>
 
         </div>
       </div>
