--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
     <br>
       2003年以来，新政府取得的妇女高参政比例植根于卢旺达人在漫长的种族屠杀中所承受的苦难，但是无论是流亡期间还是回到国内，妇女参与武装斗争和民间妇女运动<span style="color: #162360;font-weight: bold;font-size: 24px">更多的是一种社会使命，而非一项职业选择</span>，这是与一些没有经过战争折磨的国家中妇女参政经历所不同的地方。
     </span>
+    <p>&nbsp;</p>
+    <h2>平权路漫漫</h2>
+    <span style="line-height: 42px;font-size: 24px">
+      大屠杀后的卢旺达在推进性别平等，尤其是妇女参政方面取得了举世瞩目的成就，然而其背后是女性领导者在承担堪比男性工作压力的同时，还要承担社会再生产劳动的"双全职生产者"模式。国家公共政策在此过程中扮演了双面角色：一方面，国家自上而下颁布了一系列性别平等的法案、政策、措施，积极保障女性在各个领域，尤其是政治参与方面的平等权利；另一方面，国家却没有建立相应的公共机构来分担生育、抚育等社会再生产工作。<span style="color: #162360;font-weight: bold;font-size: 24px">这些女性领导者在依赖个体策略与非正式社会支持系统来应对沉重负担的同时，还要面对来自社群文化的审视与怀疑。</span>
+母庸质疑，卢旺达的女性地位相较于1994年前有了显著提高，但仍然没有进入人们想象中的平权社会。1994年后，卢旺达当局出台了一系列政策鼓励女性参与过去由男性担任的工作，技术工种、治安维护、司法审判等领域都出现了女性的身影，女性逐渐进入公共领域，重建满目疮痍的国家。
+      然而，在再生产过程中，卢旺达的公共设施和社会保障显然支持不足。卢旺达女性一面承担了繁重的社会工作，另一面也担负着沉重的家庭劳动，她们<span style="color: #162360;font-weight: bold;font-size: 24px">同时承担了物质再生产和人口再生产的双重职责</span>。
+在公共领域，2009年版的卢旺达劳动法将法定工作时间提高到每周45小时，这意味着当地每天法定工作时长是9小时（早上7点到下午5点，中间有1小时午饭时间）。大部分女性领导者还需要在下午正式工作结束后，继续考虑其他议题，并在晚上8点到9点结束全天的工作，这种情况与卢旺达国家统计局数据统计报告的结果相一致，该报告指出，卢旺达城市女性的每周工作时间为50小时，仅略低于男性每周51小时的工作时间。每日工作时间往往多达10—12小时。
+      而在家庭中，<span style="color: #162360;font-weight: bold;font-size: 24px">暴力冲突后国家资源的高度紧缺和基础设施的极度不完善使得卢旺达政府无力提供公共照料服务，从而进一步巩固并强化了家庭在人口再生产过程中的重要作用</span>。为了解决因暴力冲突导致的劳动力短缺问题，女性至少要生育和抚养3个以上的孩子。在当地文化中，照料丈夫仍然是妻子的重要职责，女性每天需要完成的工作包括烧饭、打扫房间、清洁衣服甚至给丈夫准备每日行装，如果丈夫的衣服没有熨烫，人们会指责其妻子没有尽责。对卢旺达议会中的女性领导者而言，结束工作回到家庭意味着另一项工作的开始。
+      <span style="color: #162360;font-weight: bold;font-size: 24px">无论职位大小，卢旺达的女性领导者仍然是家庭再生产劳动的实际参与者和主要推动者，社会文化依然强调“母亲的角色是不可替代的”</span>。卢旺达基层社群文化同时以“好母亲”和“好领导”的双重标准来审视和要求这些女性。当她们工作不力时，公众会怀疑她走上领导岗位靠的是个人关系（甚至是情色贿赂）而非工作能力与业绩；当她们全身心投入工作时，旁人又会指责她们是没有承担好妻子、母亲和照料者责任的“男人婆”（ibishegabo）。国家公共话语将女性领导者架上“社区楷模”这一高台的同时，也让她们承受着来自传统社群文化的审视和压力。
+即使卢旺达女性在国家议会中占据了相当大数的席位，但她们依然是权力作用的对象，而非行使权力的主体，形式上的平等并不意味着实质上的平等。在文化的浸润中她们有意无意地认同并延续着传统的父权秩序，尽管在公共领域大放异彩，也仍然没有改变社会性别观念。
+    </span>
+
   </div>
 </section>
 
@@ -267,7 +279,7 @@
         </div>
         <div class="col-lg-7">
           <br><br><br><br><br><br><br>
-          <img src="img/beioushijianzhou.jpg" alt="北欧参政图片">
+          <img src="img/beioushijianzhou.jpg" alt="北欧参政图片" style="width:100%;height: 90%">
         </div>
       </div>
     </div>
