--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         </div>
         <div class="col-lg-7">
           <br><br><br><br><br><br><br>
-          <img src="img/beioushijianzhou.jpg" alt="北欧参政图片" style="width:100%;height: 90%">
+          <img src="img/beioushijianzhou.jpg" alt="北欧参政图片">
         </div>
       </div>
     </div>
